@startuml
class com.patch4code.loglinemovieapp.MainActivity {
-  db
+ void onCreate(Bundle?)
}


class com.patch4code.loglinemovieapp.features.navigation.presentation.screen_navigation.NavigationViewModel {
-  _currentScreen
+ LiveData<Screen> currentScreen
+ void updateScreen(Screen)
+ void overrideCurrentScreenTitle(UiText)
}


class com.patch4code.loglinemovieapp.features.home.presentation.screen_home.HomeViewModel {
- TmdbApiService tmdbApiService
-  _isLoading
+ LiveData<Boolean> isLoading
-  _popularMovies
-  _topRatedMovies
-  _upcomingMovies
-  _homeMoviesMap
+ LiveData<Map<UiText.StringResource, List<Movie>>> homeMoviesMap
+ void loadHomeViewData()
- void updateHomeMovieMap()
}




androidx.activity.ComponentActivity <|-- com.patch4code.loglinemovieapp.MainActivity
androidx.lifecycle.ViewModel <|-- com.patch4code.loglinemovieapp.features.navigation.presentation.screen_navigation.NavigationViewModel
androidx.lifecycle.ViewModel <|-- com.patch4code.loglinemovieapp.features.home.presentation.screen_home.HomeViewModel
@enduml